# meta-hackathon

./: .gitignore  .openenv-exclude  Makefile  README.md  __init__.py  client.py  generate_tasks_jsonl.py  inference.py  itsm_grpo_torchforge.ipynb  models.py  openenv.yaml  pre-validation-script.sh  pyproject.toml  requirements.txt  sample-inference.py  tasks.jsonl
assets/: metrics_summary.json
docs/: architecture.md
examples/: run_single_task.py
itsm/dbs/: db_1765301900121_3mwjj54xy.sql  db_1765893060767_9rwtfbbp7.sql  db_1765949061488_6sskwu6en.sql  db_1765984530018_6f72jkf3p.sql  db_1766063289316_o5f6sbf3g.sql  db_1766091624245_iotwhtzd5.sql  db_1766289728874_6ecz8xaeu.sql  db_1766420030407_0anxy19de.sql  db_1768479715490_ex6u7viv2.sql
itsm_openenv_benchmark/: __init__.py  client.py  environment.py  models.py
itsm_openenv_benchmark/env/: __init__.py  core.py  loaders.py  models.py
itsm_openenv_benchmark/env/graders/: __init__.py  common.py  incident.py  knowledge.py  problem.py  sla.py
scripts/: generate_metrics_plot.py
server/: Dockerfile  app.py  environment.py  pre-validation-script.sh
server/env/: __init__.py  core.py  loaders.py  models.py
server/env/graders/: __init__.py  common.py  incident.py  knowledge.py  problem.py  sla.py
tests/: test_environment_smoke.py
